--- a/desktop/styles.css
+++ b/desktop/styles.css
@@ -1,518 +1,654 @@
+
+.banner-common {
+  width: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+:root {
+  --primary-color: #009688;
+  --secondary-color: #f8f8f8;
+  --dark-color: #000;
+  --light-color: #fff;
+  --shadow-color: rgba(0, 0, 0, 0.1);
+  --transparent-color: rgba(0, 0, 0, 0);
+}
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 
 /* Global Styles */
 * {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
+margin: 0;
+padding: 0;
+font-family: 'Roboto', sans-serif;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #f8f8f8;
-  margin: 0;
-  padding: 0;
+font-family: 'Roboto', sans-serif;
+background-color: var(--secondary-color);
+margin: 0;
+padding: 0;
 }
 
 /* index.html Content Styles*/
 
 .formerly-temp {
-  font-size: medium;
-  font-weight: 900;
-  font-style: italic;
-  margin-top: 5px ;
-  margin-bottom: 5px;
-  font-family: 'Roboto', sans-serif;
+font-size: medium;
+font-weight: 900;
+font-style: italic;
+margin-top: 5px ;
+margin-bottom: 5px;
+font-family: 'Roboto', sans-serif;
 }
 .content {
-  width: 100%;
-  height: 20%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  color: #fff;
+width: 100%;
+height: 20%;
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+text-align: center;
+color: var(--light-color);
 }
 
 .content h1 {
-  font-size: 70px;
-  margin-top: -25px;
+font-size: 70px;
+margin-top: -25px;
 }
 
 .content p {
-  margin: 5px auto;
-  font-weight: 100;
-  line-height: 25px;
+margin: 5px auto;
+font-weight: 100;
+line-height: 25px;
 }
 
 
- button {
-  width: 200px;
-  padding: 15px 0;
-  text-align: center;
-  margin: 20px 10px;
-  border-radius: 25px;
-  font-weight: bold;
-  border: 2px solid #009688;
-  background: transparent;
-  color: white;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
+button {
+width: 200px;
+padding: 15px 0;
+text-align: center;
+margin: 20px 10px;
+border-radius: 25px;
+font-weight: bold;
+border: 2px solid var(--primary-color);
+background: transparent;
+color: white;
+cursor: pointer;
+position: relative;
+overflow: hidden;
 }
 
 .index-span {
-  background: #009688;
-  height: 100%;
-  width: 0;
-  border-radius: 25px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  z-index: -1;
-  transition: 0.5s;
+background: var(--primary-color);
+height: 100%;
+width: 0;
+border-radius: 25px;
+position: absolute;
+left: 0;
+bottom: 0;
+z-index: -1;
+transition: 0.5s;
 }
 
 button:hover .index-span {
-  width: 100%;
+width: 100%;
 }
 
 /* Adding animation */
-@keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
-}
-
 .content, .contact, .container {
-  animation: fadeIn 2s ease-in-out;
+transition: opacity 2s ease-in-out;
 }
 
 
 /*-------------------------------------------------------------------------- */
 .banner-home {
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  padding-bottom: 10%;
+width: 100%;
+height: 100%;
+background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+background-size: cover;
+background-position: center;
+position: relative;
+padding-bottom: 10%;
 }
 .banner {
-  width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
-  background-size: cover;
-  background-position: center;
-  position: relative;
+width: 100%;
+height: 100vh;
+background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+background-size: cover;
+background-position: center;
+position: relative;
+}
+
+.banner-services {
+width: 100%;
+height: 100%;
+background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+background-size: cover;
+background-position: center;
+position: relative;
+padding-bottom: 10%;
 }
 
 .banner-contact {
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  padding-bottom: 2.5%;
+width: 100%;
+height: 100%;
+background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+background-size: cover;
+background-position: center;
+position: relative;
+padding-bottom: 2.5%;
 }
 
 
 .banner-about {
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
-  background-size: cover;
-  background-position: center;
-  position: relative;
+width: 100%;
+height: 100%;
+background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+background-size: cover;
+background-position: center;
+position: relative;
 }
 
 
 .banner-index {
-  width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
-  background-size: cover;
-  background-position: center;
-  position: relative;
+width: 100%;
+height: 100vh;
+background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
+background-size: cover;
+background-position: center;
+position: relative;
 }
 
 .navbar {
-  background-color: rgba(0, 0, 0, 0.767);
-  width: 100%;
-  height: 50%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 80px;
-  z-index: 1;
-  position: relative;
+background-color: rgba(0, 0, 0, 0.767);
+width: 100%;
+height: 50%;
+margin: auto;
+display: flex;
+align-items: center;
+justify-content: space-between;
+height: 80px;
+z-index: 1;
+position: relative;
 }
 
 .logo {
-  position: relative;
-  width: 120px;
-  cursor: pointer;
+position: relative;
+width: 120px;
+cursor: pointer;
 }
 
 .navbar ul {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  margin: 0;
-  padding: 0;
+list-style: none;
+display: flex;
+align-items: center;
+margin: 0;
+padding: 0;
 }
 
 .navbar ul li {
-  margin: 0 20px;
-  position: relative;
+margin: 0 20px;
+position: relative;
 }
 
 .navbar ul li a {
-  text-decoration: none;
-  color: #fff;
+text-decoration: none;
+color: var(--light-color);
 }
 
 /* Navbar Hovering */
 .navbar ul li::after {
-  content: '';
-  height: 3px;
-  width: 0;
-  background: #009688;
-  position: absolute;
-  left: 0;
-  bottom: -2.5px;
-  transition: 0.5s;
+content: '';
+height: 3px;
+width: 0;
+background: var(--primary-color);
+position: absolute;
+left: 0;
+bottom: -2.5px;
+transition: 0.5s;
 }
 
 .navbar ul li:hover::after {
-  width: 100%;
+width: 100%;
 }
 
 /* Dropdown styles */
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #5c5c5c24;
-  min-width: 200px;
-  max-height: 0px;
-  overflow-y: auto;
-  flex-direction: column;
-  transition: max-height 0.5s ease-in;
-  font-size: small;
+display: none;
+position: absolute;
+background-color: #5c5c5c24;
+min-width: 200px;
+max-height: 0px;
+overflow-y: auto;
+flex-direction: column;
+transition: max-height 0.5s ease-in;
+font-size: small;
 }
 
 .dropdown-content.show {
-  max-height: 100px;
+max-height: 100px;
 }
 
 /* Show the dropdown content when clicking on the parent */
 .dropdown.clicked .dropdown-content { 
-  max-height: 1000px;
+max-height: 1000px;
 }
 
 .dropdown-content li {
-  padding: 5px 0;
+padding: 5px 0;
 }
 
 .dropdown-content li a {
-  color: #000;
-  text-decoration: none;
-  display: block;
-  padding: 5px;
-  text-align: left;
+color: var(--dark-color);
+text-decoration: none;
+display: block;
+padding: 5px;
+text-align: left;
 }
 
 .dropdown-content li a:hover {
-  background-color: #ffffff42;
+background-color: var(--light-color)fff42;
 }
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-    height: auto;
-  }
+.navbar {
+  flex-direction: column;
+  height: auto;
+}
 
-  .navbar ul li {
-    margin: 10px 0;
-  }
+.navbar ul li {
+  margin: 10px 0;
+}
 
-  .navbar ul {
-    flex-direction: column;
-    align-items: center;
-  }
+.navbar ul {
+  flex-direction: column;
+  align-items: center;
+}
 
-  .menu-icon {
-    display: none;
-    font-size: 1.5rem;
-    background: none;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  /* Show the mobile menu when active */
-  #menu.active {
-    display: flex;
-    flex-direction: column;
-  }
+.menu-icon {
+  display: none;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: var(--light-color);
+  cursor: pointer;
+}
+
+/* Show the mobile menu when active */
+#menu.active {
+  display: flex;
+  flex-direction: column;
+}
 }
 
 /*  Contact Styles  */
 
 .container-contact {
-  padding: 50px;
-  height: 100%;
-  width: auto;
-  margin: 10px auto;
-  margin-bottom: 10px;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  padding: 10%;
+padding: 50px;
+height: 100%;
+width: auto;
+margin: 10px auto;
+margin-bottom: 10px;
+box-shadow: 0px 2px 10px var(--shadow-color);
+border-radius: 10px;
+padding: 10%;
 }
 
 .contact {
-  background-color: rgba(58, 58, 58, 0);
-  padding: 20px;
-  height: auto;
-  width: auto;
+background-color: rgba(58, 58, 58, 0);
+padding: 20px;
+height: auto;
+width: auto;
 }
 
 .contact h2 {
-  font-size: 30px;
-  margin-bottom: 20px;
-  text-align: center;
-  color: #ffffff;
+font-size: 1.875rem;
+margin-bottom: 20px;
+text-align: center;
+color: var(--light-color)fff;
 }
 
 .contact-info {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
 }
 
 .contact-item {
-  display: flex;
-  align-items: center;
-  margin: 10px;
-  padding: 5px 10px;
-  background-color: rgba(123, 123, 123, 0.648);
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+display: flex;
+align-items: center;
+margin: 10px;
+padding: 5px 10px;
+background-color: rgba(123, 123, 123, 0.648);
+border-radius: 5px;
+box-shadow: 0 2px 4px var(--shadow-color);
 }
 
 .contact-item i {
-  margin-right: 10px;
-  font-size: 18px;
-  color: #009688;
+margin-right: 10px;
+font-size: 1.125rem;
+color: var(--primary-color);
 }
 
 .contact-item p {
-  font-size: 16px;
-  color: #000;
+font-size: 1rem;
+color: var(--dark-color);
 }
 
 .location {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 20px;
+display: flex;
+align-items: center;
+justify-content: center;
+margin: 20px;
 }
 
 .location i {
-  margin-right: 10px;
-  font-size: 18px;
-  color: #009688;
+margin-right: 10px;
+font-size: 1.125rem;
+color: var(--primary-color);
 }
 
 .location p {
-  font-size: 16px;
-  color: #ffffff;
+font-size: 1rem;
+color: var(--light-color)fff;
 }
 
 .facebook-page {
-  display: flex;
-  justify-content: center;
-  margin: 20px;
+display: flex;
+justify-content: center;
+margin: 20px;
 }
 
 .facebook-page iframe {
-  border: none;
-  overflow: hidden;
-  background-color: rgba(255, 255, 255, 0);
+border: none;
+overflow: hidden;
+background-color: rgba(255, 255, 255, 0);
 }
 
 /* Glowing effect on hover for phone number links */
 .contact-item p a {
-  color: #fff;
-  text-decoration: none;
-  position: relative;
+color: var(--light-color);
+text-decoration: none;
+position: relative;
 }
 
 .contact-item p a::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0;
-  z-index: -1;
-  transition: opacity 0.3s ease-in-out;
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: var(--light-color);
+opacity: 0;
+z-index: -1;
+transition: opacity 0.3s ease-in-out;
 }
 
 .contact-item p a:hover::before {
-  opacity: 0.4;
+opacity: 0.4;
 }
 
 /* About us Styles */
 
 .container {
-  padding: 50px;
-  height: auto;
-  width: auto;
-  margin: 10px auto;
-  margin-bottom: 10px;
-  background-color: #52525242;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  padding: 10%;
+padding: 50px;
+height: auto;
+width: auto;
+margin: 10px auto;
+margin-bottom: 10px;
+background-color: #52525242;
+box-shadow: 0px 2px 10px var(--shadow-color);
+border-radius: 10px;
+padding: 10%;
 }
 
 .title {
-  font-size: 28px;
-  font-weight: bold;
-  color: #009688;
-  margin-bottom: 15px;
+font-size: 28px;
+font-weight: bold;
+color: var(--primary-color);
+margin-bottom: 15px;
 }
 
 .description {
-  font-size: 16px;
-  line-height: 1.6;
-  color: #ffffff;
-  margin-bottom: 20px;
-  width: auto;
+font-size: 1rem;
+line-height: 1.6;
+color: var(--light-color)fff;
+margin-bottom: 20px;
+width: auto;
 }
 
 /* Add some spacing between paragraphs */
 .description + .description {
-  margin-top: 20px;
+margin-top: 20px;
 }
 
 /* Add a subtle border bottom for the titles */
 .title {
-  border-bottom: 2px solid #009688;
-  padding-bottom: 10px;
+border-bottom: 2px solid var(--primary-color);
+padding-bottom: 10px;
 }
 
 /* Add a small animation on hover for the titles */
 .title:hover {
-  transform: scale(1.02);
-  transition: transform 0.2s ease-in-out;
+transform: scale(1.02);
+transition: transform 0.2s ease-in-out;
 }
 
 /* Add a link style for external links */
 a {
-  color: #009688;
-  text-decoration: none;
+color: var(--primary-color);
+text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+text-decoration: underline;
 }
 
 /* Sliding Pics/Container Styles */
 
 .sliding-container {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-  height: 500px; /* Set the height according to your images */
-  cursor: pointer;
-  transform: translateX(0);
-  background-color: #3333335e;
+width: 100%;
+overflow: hidden;
+position: relative;
+height: 500px; /* Set the height according to your images */
+transform: translateX(0);
+background-color: #3333335e;
 }
 
 .sliding-container img {
-  width: 550px;
-  height: 400px;
-  position: absolute;
-  top: 50px;
-  left: 50%;
-  transform: translateX(-50%);
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-  border: #bd2300 2.5px solid;
+width: 550px;
+height: 400px;
+position: absolute;
+top: 50px;
+left: 50%;
+transform: translateX(-50%);
+opacity: 0;
+transition: opacity 0.5s ease-in-out;
+border: #bd2300 2.5px solid;
 }
 
 .sliding-container img:first-child {
-  opacity: 1;
+opacity: 1;
+}
+
+
+.sliding-container-keydupe1 {
+height: auto;
+width: auto;
+overflow: visible;
+height: auto; /* Set the height according to your images */
+cursor: pointer;
+margin-left: 10%;
+flex: 30%;
+}
+
+.sliding-container-keydupe1 img {
+width: auto;
+max-width: 20%;
+height: auto;
+max-height: 20%;
+position: absolute;
+opacity: 0;
+transition: opacity 0.5s ease-in-out;
+}
+
+.sliding-container-keydupe1 img:first-child {
+opacity: 1;
+}
+
+.sliding-container-keydupe2 {
+height: auto;
+width: auto;
+overflow: visible;
+height: auto; /* Set the height according to your images */
+cursor: pointer;
+margin-left: 10%;
+flex: 30%;
+}
+
+.sliding-container-keydupe2 img {
+width: auto;
+max-width: 20%;
+height: auto;
+max-height: 20%;
+position: absolute;
+opacity: 0;
+transition: opacity 0.5s ease-in-out;
+left: 65%;
+}
+
+.sliding-container-keydupe2 img:first-child {
+opacity: 1;
 }
 
 /* Home Styles */
 .home-container {
-  max-width: 1425px;
-  margin: auto;
-  padding: 30px;
-  background-color: #ffffff6f;
-  border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+max-width: 1425px;
+margin: auto;
+padding: 1.875rem;
+background-color: var(--light-color)fff6f;
+border-radius: 10px;
+box-shadow: 0 2px 6px var(--shadow-color);
 }
 
 .home-container h1 {
-  font-size: 54px;
-  font-weight: bold;
-  color: #131313;
-  margin-bottom: 0px;
-  text-align: center;
+font-size: 54px;
+font-weight: bold;
+color: #131313;
+margin-bottom: 0px;
+text-align: center;
 }
 
 .brand-name {
-  color: #bd2300;
+color: #bd2300;
 }
 
 .home-container h2 {
-  font-size: 42px;
-  color: #000000;
-  margin-bottom: 10px;
-  padding-top: 30px;
+font-size: 42px;
+color: var(--dark-color)000;
+margin-bottom: 10px;
+padding-top: 1.875rem;
 }
 
 .home-container p {
-  font-size: 14px;
-  color: #000000;
-  line-height: 1.5;
-  margin-bottom: 15px;
+font-size: 0.875rem;
+color: var(--dark-color)000;
+line-height: 1.5;
+margin-bottom: 15px;
 }
 
 .home-container ul {
-  list-style: disc;
-  margin-bottom: 20px;
-  padding-left: 20px;
+list-style: disc;
+margin-bottom: 20px;
+padding-left: 20px;
 }
 
 .home-container li {
-  color: #000000;
-  margin: 25px;
+color: var(--dark-color)000;
+margin: 25px;
 }
 
 .home-container a.contact-button {
-  display: inline-block;
-  background-color: #009688;
-  color: #000000;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: #f8f8f874 solid 1px;
-  transition: background-color 0.2s ease-in-out;
+display: inline-block;
+background-color: var(--primary-color);
+color: var(--dark-color)000;
+text-decoration: none;
+font-size: 1.125rem;
+font-weight: bold;
+padding: 10px 20px;
+border-radius: 5px;
+border: var(--secondary-color)74 solid 1px;
+transition: background-color 0.2s ease-in-out;
 }
 
 .home-container a.contact-button:hover {
-  background-color: #007a63;
+background-color: #007a63;
+}
+
+/* Services Styles */
+
+.service .container-keydupe {
+display: flex;
+flex-direction: row; /* Align children horizontally */
+align-items: flex-start; /* Align items at the top of the container */
+justify-content: space-between; /* Create space between items */
+}
+
+.service {
+background-color: rgba(255, 255, 255, 0.6);
+padding: 20px;
+border-radius: 10px;
+box-shadow: 0 2px 10px var(--shadow-color);
+margin-bottom: 20px;
+color: black;
+margin: 20px;
+height: 100vh;
+width: auto;
+}
+
+.service h2 {
+font-size: 24px;
+color: var(--dark-color)000;
+margin-top: 0;
+border-bottom: 2px solid #007a63;
+padding-bottom: 10px;
+margin-left: 20px;
+}
+
+.service h3 {
+font-size: 20;
+color: var(--dark-color);
+margin-top: 10px;
+height: auto;
+width: auto;
+margin-left: 20px;
+}
+
+.desc-keydupe {
+font-size: 1rem;
+color: var(--dark-color)000;
+line-height: 1.5;
+height: auto;
+width: auto;
+max-width: 700px;
+position: relative;
+margin-left: 20px;
+flex: 70%;
+}
+
+
+
+@media screen and (max-width: 576px) {
+/* Add styles for small devices here */
+}
+
+@media screen and (max-width: 992px) {
+/* Add styles for large devices here */
+}
+
+@media screen and (max-width: 1200px) {
+/* Add styles for extra large devices here */
 }
